--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,7 @@ wgpu = "0.15"
 pollster = "0.2"
 bytemuck = { version = "1.12", features = [ "derive" ]}
 
+[dependencies.image]
+version = "0.24"
+default-features = false
+features = ["png", "jpeg"]
