--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,21 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+# Other dependencies
+reqwest = { version = "0.11" }
+web-sys = { version = "0.3", features = [
+	"Document",
+	"Window",
+	"Element",
+	"Location",
+]}
+
+[build-dependencies]
+anyhow = "1.0"
+fs_extra = "1.2"
+glob ="0.3"
+
 [dependencies]
 winit = "0.27"
 env_logger = "0.10"
@@ -14,8 +29,13 @@ pollster = "0.2"
 bytemuck = { version = "1.12", features = [ "derive" ]}
 anyhow = "1.0"
 cgmath = "0.18"
+tobj = { version = "3.2.1", features = [
+	"async",
+]}
 
 [dependencies.image]
 version = "0.24"
 default-features = false
 features = ["png", "jpeg"]
+
+
