--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,38 +4,45 @@ version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[target.'cfg(target_arch = "wasm32")'.dependencies]
-# Other dependencies
-reqwest = { version = "0.11" }
-web-sys = { version = "0.3", features = [
-	"Document",
-	"Window",
-	"Element",
-	"Location",
-]}
-
-[build-dependencies]
-anyhow = "1.0"
-fs_extra = "1.2"
-glob ="0.3"
+[lib]
+crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-winit = "0.27"
-env_logger = "0.10"
-log = "0.4"
-wgpu = "0.15"
-pollster = "0.2"
-bytemuck = { version = "1.12", features = [ "derive" ]}
 anyhow = "1.0"
+bytemuck = { version = "1.12", features = [ "derive" ] }
+cfg-if = "1"
 cgmath = "0.18"
-tobj = { version = "3.2.1", features = [
-	"async",
-]}
+env_logger = "0.10"
+pollster = "0.2"
+log = "0.4"
+tobj = { version = "3.2", features = ["async"]}
+wgpu = "0.15"
+winit = "0.27"
 
 [dependencies.image]
 version = "0.24"
 default-features = false
 features = ["png", "jpeg"]
 
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+reqwest = { version = "0.11" }
+console_error_panic_hook = "0.1"
+console_log = "0.2"
+wgpu = { version = "0.15", features = ["webgl"]}
+wasm-bindgen = "0.2"
+wasm-bindgen-futures = "0.4"
+web-sys = { version = "0.3", features = [
+    "Document",
+    "Window",
+    "Element",
+    "Location",
+]}
 
+[build-dependencies]
+anyhow = "1.0"
+fs_extra = "1.2"
+glob = "0.3"
+
+[[bin]]
+name = "tutorial9-models"
+path = "src/main.rs"
