--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ log = "0.4"
 tobj = { version = "3.2", features = ["async"]}
 wgpu = "0.15"
 winit = "0.27"
+instant = "0.1"
 
 [dependencies.image]
 version = "0.24"
